stitch/src/snapshots/stitch__parser__tests__chains_field_access.snap
---
source: stitch/src/parser.rs
expression: "parse(\"a.b.c\")"
---
Field {
    object: Field {
        object: Var(
            "a",
        ),
        name: "b",
    },
    name: "c",
}
