stitch/src/snapshots/stitch__parser__tests__comparisons_do_not_chain.snap
---
source: stitch/src/parser.rs
expression: "parse(\"a < b < c\")"
---
Err(
    ParseError {
        message: "comparisons don't chain — write `a < b and b < c`, not `a < b < c`",
        span: Span {
            start: 6,
            end: 7,
        },
        entry: Expr,
    },
)
