stitch/src/snapshots/stitch__parser__tests__conditional_condition_is_a_full_binary_expression.snap
---
source: stitch/src/parser.rs
expression: "p(\"a + b * c => x | y\")"
---
If {
    cond: Binary {
        op: Add,
        left: Var(
            "a",
        ),
        right: Binary {
            op: Mul,
            left: Var(
                "b",
            ),
            right: Var(
                "c",
            ),
        },
    },
    then: Var(
        "x",
    ),
    els: Var(
        "y",
    ),
}
