stitch/src/snapshots/stitch__parser__tests__conditional_in_call_argument.snap
---
source: stitch/src/parser.rs
expression: "p(\"f(x > 0 => 1 | 0)\")"
---
Call {
    callee: Var(
        "f",
    ),
    args: [
        Arg {
            label: None,
            value: If {
                cond: Binary {
                    op: Gt,
                    left: Var(
                        "x",
                    ),
                    right: Int(
                        0,
                    ),
                },
                then: Int(
                    1,
                ),
                els: Int(
                    0,
                ),
            },
        },
    ],
}
