stitch/src/snapshots/stitch__parser__tests__conditional_without_else_is_an_error.snap
---
source: stitch/src/parser.rs
expression: "parse(\"x => a\")"
---
Err(
    ParseError {
        message: "expected '|' in conditional",
        span: Span {
            start: 6,
            end: 6,
        },
        entry: Expr,
    },
)
