stitch/src/snapshots/stitch__parser__tests__grouping_is_not_a_tuple.snap
---
source: stitch/src/parser.rs
expression: "p(\"(1 + 2)\")"
---
Binary {
    op: Add,
    left: Int(
        1,
    ),
    right: Int(
        2,
    ),
}
