stitch/src/snapshots/stitch__parser__tests__interpolation_can_hold_an_expression.snap
---
source: stitch/src/parser.rs
expression: "p(r#\"\"total {a + b}\"\"#)"
---
Str(
    [
        Lit(
            "total ",
        ),
        Interp(
            Binary {
                op: Add,
                left: Var(
                    "a",
                ),
                right: Var(
                    "b",
                ),
            },
        ),
    ],
)
