stitch/src/snapshots/stitch__parser__tests__lambda_as_call_argument.snap
---
source: stitch/src/parser.rs
expression: "p(\"map(x -> x * 2)\")"
---
Call {
    callee: Var(
        "map",
    ),
    args: [
        Arg {
            label: None,
            value: Lambda {
                params: [
                    "x",
                ],
                body: Binary {
                    op: Mul,
                    left: Var(
                        "x",
                    ),
                    right: Int(
                        2,
                    ),
                },
            },
        },
    ],
}
