stitch/src/snapshots/stitch__parser__tests__lambda_is_right_associative.snap
---
source: stitch/src/parser.rs
expression: "p(\"x -> y -> z\")"
---
Lambda {
    params: [
        "x",
    ],
    body: Lambda {
        params: [
            "y",
        ],
        body: Var(
            "z",
        ),
    },
}
