stitch/src/snapshots/stitch__parser__tests__list_literal_distinct_from_indexing.snap
---
source: stitch/src/parser.rs
expression: "p(\"[xs[0], ys[1]]\")"
---
List(
    [
        Index {
            object: Var(
                "xs",
            ),
            index: Int(
                0,
            ),
        },
        Index {
            object: Var(
                "ys",
            ),
            index: Int(
                1,
            ),
        },
    ],
)
