stitch/src/snapshots/stitch__parser__tests__maximal_munch_separates_statements.snap
---
source: stitch/src/parser.rs
expression: "p(\"{ f(x)  g(y)  z }\")"
---
Block {
    stmts: [
        Expr(
            Call {
                callee: Var(
                    "f",
                ),
                args: [
                    Arg {
                        label: None,
                        value: Var(
                            "x",
                        ),
                    },
                ],
            },
        ),
        Expr(
            Call {
                callee: Var(
                    "g",
                ),
                args: [
                    Arg {
                        label: None,
                        value: Var(
                            "y",
                        ),
                    },
                ],
            },
        ),
    ],
    result: Some(
        Var(
            "z",
        ),
    ),
}
