stitch/src/snapshots/stitch__parser__tests__mixed_comparisons_do_not_chain.snap
---
source: stitch/src/parser.rs
expression: "parse(\"a == b != c\")"
---
Err(
    ParseError {
        message: "comparisons don't chain — write `a < b and b < c`, not `a < b < c`",
        span: Span {
            start: 7,
            end: 9,
        },
        entry: Expr,
    },
)
